[package]
name = "apiline"
version = "0.1.0"
edition = "2021"
description = "Interactive CLI tool for executing API workflows step-by-step"
license = "Apache-2.0"
repository = "https://github.com/thisismani/apiline"
keywords = ["api", "cli", "workflow", "automation", "testing"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "apiline"
path = "src/main.rs"

[dependencies]
# CLI and config
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Terminal output
colored = "2.0"

# File watching for hot reload
notify = "6.0"
